hopefully fixed printing on mobile

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,159 +1,151 @@
-html {
-    -webkit-text-size-adjust: 100%; /* Prevent font scaling in landscape while allowing user zoom */
-}
-html, body {
-    overflow:hidden;
-}
-#scroll {
-    padding:0;
-    margin:0;
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    overflow:auto;
-}
-#wrapper {
-    background-color:#f9feff;
-    padding:10px;
-    margin:0;
-}
-.noverflow {
-    overflow:hidden;
-    touch-action: none;
-    -ms-touch-action: none;
-}
-#hide {
-    width:100%;
-    height:100%;
-    position:fixed;
-    top:0;
-    left:0;
-    background-color: white;
-    z-index: 6;
-}
-h1 {
-    margin-top:21px;
-    margin-bottom:21px;
-}
-h2 {
-    border-top: 3px black solid;
-    padding-top:10px;
-    margin-top:19px;
-}
-h3 {
-    margin:0px;
-}
 * {
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
-.close-recipe {
-    position:fixed;
-    top:4px;
-    right:4px;
-    background-color:transparent;
-    font-size:30px;
-    border:none;
-    text-align:right;
-    padding-right:10px;
-    padding-top:0px;
-    cursor:pointer;
-}
-.copy {
-    position:fixed;
-    bottom:4px;
-    right:4px;
-    cursor:pointer;
-}
-.ellis {
-    position:fixed;
-    bottom:4px;
-    right:112px;
-    cursor:pointer;
-}
-.reddit {
-    position:fixed;
-    bottom:4px;
-    right:58px;
-    cursor:pointer;
-}
-.link {
-    position:fixed;
-    bottom:4px;
-    right:166px;
-    cursor:pointer;
-}
-#info {
-    display:none;
-    bottom:0;
-    right:0;
-    padding:10px;
-    margin:0px;
-    background-color:#e2fad8;
-    border: 2px #79d870 solid;
-    border-radius:10px;
-    position:fixed;
-    bottom:0px;
-    left:0;
-    z-index:5;
-}
-#info > p {
-    margin:0;
-    padding:0;
-    font-size:20px;
-}
-.card {
-    background-color:#d8f5fa;
-    padding:10px; 
-    border: 2px #70c8d8 solid;
-    box-sizing:border-box;
-    overflow-y: auto;
-}
-.outer {
-    position:relative;
-    margin:10px;
-    border-radius:10px;
-}
-.higher {
-    z-index:4;
-}
-#bottom-boy {
-    width:1px;
-    display:block;
-}
-.fill {
-    position:fixed;
-    top:0;
-    left:0;
-    padding-bottom:50px;
-    width:100%;
-    height:100%;
-}
-li {
-    margin-top:7px;
-}
-h4 {
-    margin-bottom:0px;
-}
-#icons {
-    position:absolute;
-    top:21px;
-    right:10px;
-}
-@media print {
-    * {
-        visibility:hidden;
+@media screen {
+    html {
+        -webkit-text-size-adjust: 100%; /* Prevent font scaling in landscape while allowing user zoom */
     }
-    #recipes, h1 {
+    html, body {
+        overflow:hidden;
+    }
+    #scroll {
+        padding:0;
+        margin:0;
+        position:absolute;
+        top:0;
+        left:0;
+        width:100%;
+        height:100%;
+        overflow:auto;
+    }
+    #wrapper {
+        background-color:#f9feff;
+        padding:10px;
+        margin:0;
+    }
+    .noverflow {
+        overflow:hidden;
+        touch-action: none;
+        -ms-touch-action: none;
+    }
+    #hide {
+        width:100%;
+        height:100%;
+        position:fixed;
+        top:0;
+        left:0;
+        background-color: white;
+        z-index: 6;
+    }
+    h1 {
+        margin-top:21px;
+        margin-bottom:21px;
+    }
+    h2 {
+        border-top: 3px black solid;
+        padding-top:10px;
+        margin-top:19px;
+    }
+    h3 {
+        margin:0px;
+    }
+    .close-recipe {
+        position:fixed;
+        top:4px;
+        right:4px;
+        background-color:transparent;
+        font-size:30px;
+        border:none;
+        text-align:right;
+        padding-right:10px;
+        padding-top:0px;
+        cursor:pointer;
+    }
+    .copy {
+        position:fixed;
+        bottom:4px;
+        right:4px;
+        cursor:pointer;
+    }
+    .ellis {
+        position:fixed;
+        bottom:4px;
+        right:112px;
+        cursor:pointer;
+    }
+    .reddit {
+        position:fixed;
+        bottom:4px;
+        right:58px;
+        cursor:pointer;
+    }
+    .link {
+        position:fixed;
+        bottom:4px;
+        right:166px;
+        cursor:pointer;
+    }
+    #info {
         display:none;
+        bottom:0;
+        right:0;
+        padding:10px;
+        margin:0px;
+        background-color:#e2fad8;
+        border: 2px #79d870 solid;
+        border-radius:10px;
+        position:fixed;
+        bottom:0px;
+        left:0;
+        z-index:5;
+    }
+    #info > p {
+        margin:0;
+        padding:0;
+        font-size:20px;
+    }
+    .card {
+        background-color:#d8f5fa;
+        padding:10px; 
+        border: 2px #70c8d8 solid;
+        box-sizing:border-box;
+        overflow-y: auto;
+    }
+    .outer {
+        position:relative;
+        margin:10px;
+        border-radius:10px;
+    }
+    .higher {
+        z-index:4;
+    }
+    #bottom-boy {
+        width:1px;
+        display:block;
     }
     .fill {
-        visibility:visible;
-        position:relative;
-        background-color:transparent;
-        border:none;
-	    overflow:visible;
+        position:fixed;
+        top:0;
+        left:0;
+        padding-bottom:50px;
+        width:100%;
+        height:100%;
+    }
+    li {
+        margin-top:7px;
+    }
+    h4 {
+        margin-bottom:0px;
+    }
+    #icons {
+        position:absolute;
+        top:21px;
+        right:10px;
+    }
+}
+@media print {
+    #recipes, h1, #icons, #info {
+        display:none;
     }
     .fill * {
         visibility:visible;
